--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-test-autoconfigure</artifactId>
       <version>2.4.2</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
